Fix : 빌드 캐시 비활성화

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: 테스트
-        run : ./gradlew clean test -PspringProfile=test
+        run : ./gradlew clean test -PspringProfile=test --no-build-cache
 
 
